# fiaas-logger-rust

./: Cargo.toml
src/: lib.rs
