[package]
name = "fiaas-logger"
version = "0.1.0"
authors = ["Fredrik Fossum <fredrik.fossum@finn.no>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
humantime = "2.0"
serde_json = "1.0"
