[package]
name = "fiaas-logger"
version = "0.1.1"
authors = ["Fredrik Fossum <fredrik.fossum@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ffossum/fiaas-logger-rust"
description = "`log` implementation for FIAAS applications"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
humantime = "2.0"
serde_json = "1.0"
